verify_step.txt
javac : src\main\java\com\oceanview\serv
ice\ReservationService.java:3: error: 
package com.oceanview.dao does not exist
At line:1 char:135
+ ...  -join ";"; javac -cp "$cp" -d 
bin src/main/java/com/oceanview/util/V 
...
+                 ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecif 
   ied: (src\main\java\c... does not e  
  xist:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCom 
   mandError
 
import com.oceanview.dao.ReservationDAO;
                        ^
src\main\java\com\oceanview\service\Rese
rvationService.java:4: error: package 
com.oceanview.dao does not exist
import com.oceanview.dao.RoomDAO;
                        ^
src\main\java\com\oceanview\service\Rese
rvationService.java:5: error: package 
com.oceanview.dao does not exist
import com.oceanview.dao.PaymentDAO;
                        ^
src\main\java\com\oceanview\service\Rese
rvationService.java:6: error: package 
com.oceanview.model does not exist
import com.oceanview.model.Payment;
                          ^
src\main\java\com\oceanview\service\Rese
rvationService.java:7: error: package 
com.oceanview.model does not exist
import com.oceanview.model.Reservation;
                          ^
src\main\java\com\oceanview\service\Rese
rvationService.java:8: error: package 
com.oceanview.model does not exist
import com.oceanview.model.Room;
                          ^
src\main\java\com\oceanview\service\Rese
rvationService.java:9: error: cannot 
find symbol
import com.oceanview.util.EmailUtil;
                         ^
  symbol:   class EmailUtil
  location: package com.oceanview.util
src\main\java\com\oceanview\service\Rese
rvationService.java:21: error: cannot 
find symbol
    private ReservationDAO 
reservationDAO = new ReservationDAO();
            ^
  symbol:   class ReservationDAO
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:22: error: cannot 
find symbol
    private RoomDAO roomDAO = new 
RoomDAO();
            ^
  symbol:   class RoomDAO
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:23: error: cannot 
find symbol
    private PaymentDAO paymentDAO = new 
PaymentDAO();
            ^
  symbol:   class PaymentDAO
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:94: error: cannot 
find symbol
    public Payment calculateBill(int 
reservationId) {
           ^
  symbol:   class Payment
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:139: error: cannot 
find symbol
    public Reservation getById(int id) {
           ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:143: error: cannot 
find symbol
    public Reservation 
getByNumber(String number) {
           ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:147: error: cannot 
find symbol
    public List<Reservation> 
getByUser(int userId) {
                ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:151: error: cannot 
find symbol
    public List<Reservation> getAll() {
                ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:155: error: cannot 
find symbol
    public List<Reservation> 
search(String keyword) {
                ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:187: error: cannot 
find symbol
    public List<Room> 
getAvailableRooms(String type, Date 
checkIn, Date checkOut) {
                ^
  symbol:   class Room
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:21: error: cannot 
find symbol
    private ReservationDAO 
reservationDAO = new ReservationDAO();
                                        
        ^
  symbol:   class ReservationDAO
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:22: error: cannot 
find symbol
    private RoomDAO roomDAO = new 
RoomDAO();
                                  ^
  symbol:   class RoomDAO
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:23: error: cannot 
find symbol
    private PaymentDAO paymentDAO = new 
PaymentDAO();
                                        
^
  symbol:   class PaymentDAO
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:43: error: cannot 
find symbol
        List<Room> availableRooms = 
roomDAO.findAvailable(roomType, 
checkIn, checkOut);
             ^
  symbol:   class Room
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:48: error: cannot 
find symbol
        Room selectedRoom = 
availableRooms.get(0);
        ^
  symbol:   class Room
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:58: error: cannot 
find symbol
        Reservation reservation = new 
Reservation.Builder()
        ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:70: error: package 
Reservation does not exist
                
.status(Reservation.Status.PENDING)
                                   ^
src\main\java\com\oceanview\service\Rese
rvationService.java:58: error: package 
Reservation does not exist
        Reservation reservation = new 
Reservation.Builder()
                                        
         ^
src\main\java\com\oceanview\service\Rese
rvationService.java:75: error: cannot 
find symbol
            Payment payment = new 
Payment(reservation.getId(), 
baseAmount);
            ^
  symbol:   class Payment
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:75: error: cannot 
find symbol
            Payment payment = new 
Payment(reservation.getId(), 
baseAmount);
                                  ^
  symbol:   class Payment
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:80: error: cannot 
find symbol
                EmailUtil.sendBookingCon
firmation(userEmail, guestName, 
reservation.getReservationNumber(),
                ^
  symbol:   variable EmailUtil
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:95: error: cannot 
find symbol
        Reservation res = 
reservationDAO.findById(reservationId);
        ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:105: error: cannot 
find symbol
        return 
Payment.calculateBill(reservationId, 
(double) nights, pricePerNight);
               ^
  symbol:   variable Payment
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:125: error: cannot 
find symbol
            Reservation res = 
reservationDAO.findById(reservationId);
            ^
  symbol:   class Reservation
  location: class ReservationService
src\main\java\com\oceanview\service\Rese
rvationService.java:128: error: cannot 
find symbol
                    EmailUtil.sendCancel
lationNotice(userEmail, 
res.getGuestName(), 
res.getReservationNumber());
                    ^
  symbol:   variable EmailUtil
  location: class ReservationService
32 errors
